# supoclip

./: .env copy.example  .env.example  .gitignore  AGENTS.md  CLAUDE.md  QUICKSTART.md  README.md  docker-compose.cpu.yml  docker-compose.gpu.yml  docker-compose.yml  install_cron.sh  start.sh  up  up.ps1
backend/: .env.example  Dockerfile  Dockerfile.gpu  pyproject.toml
backend/src/: ai.py  config.py  main_refactored.py  video_utils.py
backend/src/api/routes/: media.py  tasks.py
backend/src/services/: task_service.py  video_service.py
backend/src/workers/: tasks.py
frontend/prisma/: schema.prisma
frontend/prisma/migrations/20260302143000_add_user_is_admin/: migration.sql
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/admin/: page.tsx
frontend/src/app/api/admin/users/[id]/admin/: route.ts
frontend/src/app/api/fonts/: route.ts
frontend/src/app/api/fonts/[fontName]/: route.ts
frontend/src/app/api/fonts/upload/: route.ts
frontend/src/app/api/system/encoding/: route.ts
frontend/src/app/settings/: page.tsx
frontend/src/app/tasks/[id]/: page.tsx
frontend/src/components/: dynamic-video-player.tsx
frontend/src/components/admin/: admin-user-toggle.tsx
frontend/src/lib/: auth.ts  backend-auth.ts
